Fix silly layout issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,8 @@ body {
 
 #sidebar {
   width: 35rem;
+  height: 95vh;
+  overflow-y:scroll;
   display: flex;
   flex-direction: column;
 }
